# solved_problems

Elegance and scalability/File Working/Such different streams/: CreateFiles.cpp  ifstream_ofstream  ifstream_ofstream.cpp  open_close_files.cpp
YandexPracticum/11th_sprint/: Actor.cpp  CreateCat.cpp
YandexPracticum/11th_sprint/9 RAII idiom/2 RAII idea/: UniquePtr.cpp
YandexPracticum/11th_sprint/Elegance and Scalability/4 Smart Pointers2 Unique Ptr/: Actor.cpp  Cat.cpp  TreeNodePtr.cpp
YandexPracticum/13th_sprint/: PrintStats.cpp
YandexPracticum/13th_sprint/Elegance and Scalability/13 Get Data from Function/: return_two_containers.cpp  tuple.cpp  variant.cpp
YandexPracticum/15th_sprint/Lib Dev & Large Projects/3 New way Build. CMake/4 Buid by CMake/Hello CMake Printer/hello_cmake/: CMakeLists.txt
YandexPracticum/15th_sprint/Lib Dev & Large Projects/3 New way Build. CMake/4 Buid by CMake/Hello CMake Printer/hello_cmake/src/: hello_printer.cpp  main.cpp
YandexPracticum/15th_sprint/Lib Dev & Large Projects/3 New way Build. CMake/5 CMake Syntax Basics/: CMakeLists.txt
YandexPracticum/15th_sprint/Lib Dev & Large Projects/3 New way Build. CMake/5 CMake Syntax Basics/FILES_PATH/: CMakeLists.txt
YandexPracticum/15th_sprint/Lib Dev & Large Projects/3 New way Build. CMake/5 CMake Syntax Basics/FILES_PATH/src/: main.cpp
YandexPracticum/15th_sprint/Lib Dev & Large Projects/3 New way Build. CMake/5 CMake Syntax Basics/SOBEL/: CMakeLists.txt  hmirr.cpp  readme.txt  sobel.cpp  vmirr.cpp
YandexPracticum/15th_sprint/Lib Dev & Large Projects/3 New way Build. CMake/5 CMake Syntax Basics/if/: CMakeLists.txt
YandexPracticum/15th_sprint/Lib Dev & Large Projects/3 New way Build. CMake/5 CMake Syntax Basics/if_MinGW/: if_min_gw.txt
YandexPracticum/15th_sprint/Lib Dev & Large Projects/3 New way Build. CMake/5 CMake Syntax Basics/list/: CMakeLists.txt
YandexPracticum/15th_sprint/Lib Dev & Large Projects/3 New way Build. CMake/5 CMake Syntax Basics/pussycat/: CMakeLists.txt
YandexPracticum/15th_sprint/Lib Dev & Large Projects/3 New way Build. CMake/5 CMake Syntax Basics/source_group/: CMakeLists.txt
YandexPracticum/15th_sprint/Lib Dev & Large Projects/3 New way Build. CMake/5 CMake Syntax Basics/string/: CMakeLists.txt
YandexPracticum/15th_sprint/Lib Dev & Large Projects/3 New way Build. CMake/7 Developing a Static Library/Use Static Library as Dependant/Cypher/: CMakeLists.txt
YandexPracticum/15th_sprint/Lib Dev & Large Projects/3 New way Build. CMake/7 Developing a Static Library/cpp reference example/: CMakeLists.txt  main.cpp  structure.cpp  structure.h
YandexPracticum/15th_sprint/Lib Dev & Large Projects/3 New way Build. CMake/OTUS VIDEO LESSON CMAKE/Example2/: CMakeLists.txt  main.cpp  version.cpp  version.h
YandexPracticum/15th_sprint/Lib Dev & Large Projects/4 Serialization and Protobuf/: int_serialization.cpp  string_serialization.cpp
(+402 files in other folders)
